--- a/TikTok.Front-end/src/AccountManagement/Register.css
+++ b/TikTok.Front-end/src/AccountManagement/Register.css
@@ -12,6 +12,7 @@
     font-size: 28px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
+    color: black;
 }
 
 .form-control {
